--- a/front-end/index.html
+++ b/front-end/index.html
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-    <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
+    <div id="myDiv" width="1280" height="720">
+      <!-- Plotly chart will be drawn inside this DIV -->
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
